objects/CO_Treasury_Product_Management_Solutions__c.object
<CustomObject>
    <fields>
        <fullName>CF_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to capture the Account Name</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Treasury_Product_Management_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Branch__c</fullName>
        <description>This field is to capture Branch</description>
        <formula>CF_Account_Name__r.LLC_BI__Branch__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_CIF__c</fullName>
        <description>This field is to capture CIF# from Account</description>
        <formula>CF_Account_Name__r.CIF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CIF#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Is_an_Existing_Retail_Billpay_User__c</fullName>
        <description>This field is to check Existing Retail Billpay User</description>
        <inlineHelpText>Required for BillPay products</inlineHelpText>
        <label>Is an Existing Retail Billpay User?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_SFTP_Uses__c</fullName>
        <description>This field was used under Setup Information route for Management Solution products</description>
        <inlineHelpText>Required for SFTP</inlineHelpText>
        <label>SFTP Uses</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACH Origination</fullName>
                </value>
                <value>
                    <fullName>ACH Returns</fullName>
                </value>
                <value>
                    <fullName>Positive Pay</fullName>
                </value>
                <value>
                    <fullName>BAI2</fullName>
                </value>
                <value>
                    <fullName>I-Collect</fullName>
                </value>
                <value>
                    <fullName>Remittance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Treasury_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to map Management Solutions record to the Treasury Service record.</description>
        <label>Treasury Service</label>
        <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
        <relationshipName>Treasury_Product_Management_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Setup Information</label>
    <nameField>
        <displayFormat>SID-{00000}</displayFormat>
        <label>OCM CIF Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Setup Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>